﻿--------------------------
---- ChangeLog - gems ----
--------------------------
2013-01-07 Luisa Salazar 
	* Changed names of formals and representations
	* Adjusted man to be consistent with new names
2013-01-07 Luisa Salazar 
	* Added GIT
2012-12-27 Nello Blaser (version 0.83)
	* Added prediction intervals
2012-12-19 Nello Blaser (version 0.82)
	* GIT version control implemented
2012-10-02 Nello Blaser (version 0.82)
	* Resolved baseline bug for cohortSize==1
	* Resolved bugs with few events
2012-09-17 Luisa Vizcaya Salazar (version 0.81)
	* Input and output classes added
	* S4 methods for printing and summarizing results added
2012-08-16 Nello Blaser (version 0.80)
	* ChangeLog file added
	* Basic documentation added
