@@ -1,7 +1,7 @@
 Package: gems
 Type: Package
 Title: General multistate simulation model
-Version: 0.83
+Version: 0.84
 Date: 2012-12-27
 Author: Luisa Salazar Vizcaya, Nello Blaser, Thomas Gsponer
 Maintainer: Luisa Salazar Vizcaya <lsalazar@ispm.unibe.ch>
