@@ -1,4 +1,4 @@
-export(simulateCohort, generateHazardMatrix, generateParameterMatrix, generateParameterCovarianceMatrix, posteriorProbabilities)
+export(simulateCohort, generateHazardMatrix, generateParameterMatrix, generateParameterCovarianceMatrix, transitionProbabilities, cummulativeIncidence)
 exportClasses(transition.structure, ArtCohort, PosteriorProbabilities)
 importFrom("stats", update)
 importFrom("graphics", plot)
